@@ -1,0 +1,7 @@
+package ui;
+
+import java.awt.Image;
+
+public interface ScreenshotManager {
+	public void saveScreenshot(Image screenshot, String title);
+}
