@@ -6,6 +6,10 @@ Armitage Changelog
 - Meterpreter N -> Hashdump now runs post/windows/gather/smart_hashdump module.
   This gives you the benefit of seeing its output and it works in more
   situations.
+- Right-click the tab X button and select Save Screenshot to take a screenshot
+  of the current tab. This image will render the tab contents exactly as seen
+  on the screen. Useful for putting together report artifacts or presentations.
+  (thanks Rob for the suggestion)
 
 09.26.11 - take 2
 --------
